<resources>
    <string name="app_name">Career</string>
    <string name="crtr1"><a href="https://www.thedailystar.net/business/bangladesh-job-market-disquieting-trend-1574197">1.Disquieting trend in job market</a></string>
    <string name="crtr2"><a href="https://www.adb.org/publications/employment-and-labor-market-bangladesh-trends-challenges">2.Employment and the Labor Market in Bangladesh</a></string>
    <string name="crtr3"><a href="https://www.textiletoday.com.bd/employment-trends-2018-bangladesh-textile-apparel-industry/">3.Employment trends in 2018 in Bangladesh textile and apparel industry</a></string>
    <string name="crtr4"><a href="https://blog.bikroy.com/top-10-most-in-demand-jobs-in-bangladesh-for-2018/">4.Top 10 Most In-Demand Jobs in Bangladesh</a></string>
    <string name="crtr5"><a href="https://cpd.org.bd/employment-generation-in-bangladesh/">5.Employment generation in Bangladesh</a></string>
    <string name="crtr6"><a href="https://www.dhakatribune.com/career/2017/07/27/manufacturing-industry-leading-job-market">6.Manufacturing industry leads job market</a></string>
    <string name="crtr7"><a href="https://www.statista.com/statistics/438360/employment-by-economic-sector-in-bangladesh/">7.Employment by economic sector in Bangladesh 2018</a></string>
    <string name="crtr8"><a href="https://www.lightcastlebd.com/insights/2019/03/20/bangladesh-economic-outlook-2019-a-resilient-economy-in-need-of-sound-policy">8.Bangladesh Economic Outlook 2019</a></string>
    <string name="crtr9"><a href="https://www.bdjobs.com/career/training/fdi_list.asp">9.Fashion Design Institutes in Bangladesh</a></string>
    <string name="crtr10"><a href="https://www.businessdaily24.com/10-best-engineer-architect-jobs-bangladesh/">10 Best Engineer and Architect Jobs in Bangladesh</a></string>
    <string name="dudes">On the first day of July 1921 the University of Dhaka opened its doors to students with Sir P.J. Hartog as the first Vice-Chancellor of the University. The University was set up in a picturesque part of the city known as Ramna on 600 acres of land.The University started its activities with 3 Faculties,12 Departments, 60 teachers, 877 students and 3 dormitories (Halls of Residence) for the students. At present the University consists of 13 Faculties, 83 Departments, 12 Institutes, 20 residential halls, 3 hostels and more than 56 Research Centres. The number of students and teachers has risen to about 37018 and 1992 respectively.</string>
    <string name="judes">Jahangirnagar University accustomed as a residential accessible university in 1970 has now 34 departments and Six Faculties along with Two institutes, with added than fifteen thousand students, and about Five hundred academics adherent to teaching and research. The sprawling arresting campus is anchored 30 kilometres from the basic Dhaka, able-bodied affiliated with a civic highway. The aboriginal assembly of Independent Bangladesh accepted the university its Charter in 1973 beneath which the university is getting operated.</string>
    <string name="jnudes">Jagannath University as a govt. financed full pledged public university of Bangladesh is situated in the southern part of the city of Dhaka near the Buriganga. This prestigious educational establishment has a history of about 156 years which started in 1858 when Dhaka Brahma School was founded in 1858 by Dinanath Sen, Prabhaticharan Roy, Anathbandhu Mallik and Brajasundar Kaitra. The name Jagannath school was given by Kishorilal Chowdhury, the Zamindar of Baliadi who took over the school in 1872 and renamed it after his fathers name.</string>
    <string name="cudes">The Chittagong University is situated on 1,754 acres of beautiful hilly land in mauja Fatehpur under hathazari upazila, 22 km north of chittagong city. It was opened on 18 November 1966. Back in 1962, Mr. Mohammad Ferdaus Khan, Deputy Director of Public Instruction of East Pakistan, prepared a preliminary draft plan of Chittagong University. Prior to that the Chittagong University Movement Council was formed in 1961 with Badshah Mia Chowdhury, a distinguished social welfare worker of Chittagong, as president and professor Ahmad Hossain of Chittagong City College as convenor. Dr. muhammad shahidullah (1885-1969), Dr. muhammad enamul haq (1906-82) and some other intellectuals, educationists, political personalities, and social workers played leading roles in the site selection movement of 1966</string>
    <string name="kudes">Khulna University was established in 1991. There are 8 schools and 29 disciplines under these schools. The most promising characteristic of this university is that it is free from student politics. No session jam in academic activities. A big number of professors, associate professors and assisstant professors are working as faculty member of various disciplines. Many national and international research projects are on going. Student accommodation facility is very well. There are three halls for male students and two hall for female students. Library and laboratory facility is also of high quality. Students and stuffs are provided with transport facility. Overall student quality of this university is very satisfying. Graduates of this university are working all over the world with a lot of fame.</string>
    <string name="rudes">University of Rajshahi is one of the largest Universities in the country and the largest with the highest seat of learning in the northern region of Bangladesh. After its foundation on July 6, 1953, the university has passed 62 years providing higher education and research. The university is located at the green premises of Motihar which is very close to the mighty river Padma and seven km. east from the Rajshahi City Center.</string>
    <string name="budes">The declaration for establishing a Public University in the then Barisal division was made by the Founder of Bangladesh, the Father of the nation, Bangabandhu Sheikh Mujibur Rahman in 1973. Several half-hearted attempts were made by the different political governments after 1980s but it was in 2009 that the establishment of the University got meaningfully underway by the Ministry of Education, and the Honorable President of the People’s Republic of Bangladesh Md. Zillur Rahman appointed Professor Dr. Md. Harunor Rashid Khan of the Department of Soil, Water and Environment of the University of Dhaka on 18th February 2010 as the Project Director to establish the University of Barisal</string>
    <string name="bsmmudes">Bangabandhu Sheikh Mujib Medical University (BSMMU) is the premier Postgraduate Medical Institution of the country. It bears the heritage to Institute of Postgraduate Medical Research (IPGMR) which was established in December 1965. In the year 1998 the Government converted IPGMR into a Medical University for expanding the facilities for higher medical education and research in the country. It has an enviable reputation for providing high quality postgraduate education in different specialties.</string>
    <string name="smudes">Many medical colleges have been established in the country for commercial reasons. Many closed medical colleges have been started due to court order. According to the Prime Ministers order to strictly monitor whether medical standards are being properly maintained in medical colleges, a medical university will be set up in each division. According to the order, Chittagong and Rajshahi Medical University have already been established. Sylhet Medical University is the 4th Medical University of the directive</string>
    <string name="rmudes">Promoting high quality allied health professionals in relevant fields.Emerging Rajshahi Medical University as an advanced and world renowned high level research distinctive medical university in the future.</string>
    <string name="cmudes">The Chittagong Medical University established as per Chittagong Medical University Act, 2016 (Act No 17 of 2016). The vision of the Government of Bangladesh to establish the university is to expand higher education in medical science, enhance the research activities, and maintain quality assurance in both undergraduate and postgraduate Health Professional Educations.</string>
    <string name="ssmudes">Sir Salimullah Medical College is a government medical college in Bangladesh. It is located in the old part of the capital, Dhaka.It is affiliated with the University of Dhaka. Mitford Hospital is the first and Sir Salimullah Medical College is the best medical college of Bangladesh.</string>
    <string name="buetdes">BUET is one of the oldest educational institutions of Bangladesh. It started its journey as Dhaka Survey School in 1876. Later it was named as Ahsanullah Engineering College in the year 1912. When Pakistan formed, the name changed in 1962 as EPUET and after the liberation of Bangladesh, it has been named as BUET. So a great history of this University.</string>
    <string name="ruetdes">Rajshahi University of Engineering and Technology (RUET) is the prestigious public Engineering University and center of excellence offers high quality education and research in the field of engineering and technology. RUET is well balanced urban and natural environment and convenience. Rapid globalization, industrialization, presence of problems, depletion of natural resources, environmental damage, world financial insecurity, poverty, etc are the global challenge for human being as a whole. Handling such global issues require wide range of quality people share their knowledge to cooperate and take action. RUET is the center of excellence to cultivate such talented individuals who take the lead of such issues sharing their technical knowledge and experience is the most important duty of this university. RUET not only serve for the expectation of public but also contribute to human society as a whole.</string>
    <string name="kuetdes">Khulna University of Engineering and Technology (KUET) is one of the leading public universities of Bangladesh giving special emphasis in the Engineering and Technological Education and research. KUET is well known for offering very high quality educational, research and developmental programs in the major disciplines of engineering as well as basic sciences. It has a sober objective to achieve excellence in quality education, research and progression to address the present needs of the country as well as the South-Western region to make it as the "Center of Excellence".</string>
    <string name="cuetdes">CUET is a public engineering university in Bangladesh located in Raozan Upazila under Chittagong District. Established in 1968 as Engineering College, Chittagong it was converted to Bangladesh Institute of Technology, Chittagong in 1968. From 2003, this university is a government funded autonomous self degree awarding institution, maintaining special emphasis on teaching and research of engineering, technology, architecture and planning under five faculties and seventeen academic departments.Number of present students including undergraduate, graduate and post-graduate is around 4500 with 900 students graduating each year.</string>
    <string name="duetdes">Dhaka  University  of  Engineering  and Technology (DUET), Gazipur  is  situated  about  20  km from  Shahjalal  International Airport , Dhaka  surrounded  by  scenic  beauty .  It  is  deemed  as  the  seat  of   learning  in  the  arena ‘Engineering  and  Technology’  across  the  country. Only  the diploma  students  can  avail   themselves  of  enrolling  here  to  be  graduates. The  M.Sc. and  Ph.D. programs are  open   for  all   eligible  ones  that  are  designed  to   foster future  scholars  and  practitioners, by  developing  an attitude to continue  studying  lifelong   and  capacity  to  explore  specially  seeking the newest knowledge of Technology.</string>
</resources>